# WiCA

./: CMakeLists.txt  README.md  xmake.lua
doc/README/: zh_CN.md
plugins/: life.cpp  life.h  rgb.cpp  rgb.h
rules/: default_rules.json  life.json  life_dll.json  rgb.json
src/: main.cpp
src/ca/: cell_space.cpp  cell_space.h  rule_engine.cpp  rule_engine.h
src/core/: application.cpp  application.h  config.cpp  config.h  rule.cpp  rule.h
src/file_io/: huffman_coding.cpp  huffman_coding.h  snapshot_manager.cpp  snapshot_manager.h
src/input/: command_parser.cpp  command_parser.h  input_handler.cpp  input_handler.h
src/render/: renderer.cpp  renderer.h  viewport.cpp  viewport.h
src/rendering/: renderer.cpp  renderer.h  viewport.cpp  viewport.h
src/snap/: huffman_coding.cpp  huffman_coding.h  snapshot.cpp  snapshot.h
src/utils/: color.h  error_handler.cpp  error_handler.h  logger.cpp  logger.h  point.h  timer.cpp  timer.h  trie.cpp  trie.h
